--- a/css/default.css
+++ b/css/default.css
@@ -149,11 +149,11 @@ footer {
   }
 
   .illustration {
-    flex: 1.3;
+    width: 60%;
   }
 
   .body-content {
-    flex: 1;
+    width: 40%;
     text-align: left;
   }
 
